--- a/css/style.css
+++ b/css/style.css
@@ -727,6 +727,9 @@ body {
   color: inherit;
   transition: all 0.3s; }
 
+.footer-logo {
+  color: #086b82 !important; }
+
 .header {
   height: 100vh;
   background-image: radial-gradient(circle, rgba(8, 145, 178, 0.8), rgba(34, 211, 238, 0.2)), url(../img/hero-small-ideo4.png);
